[package]
name = "oxygengine"
version = "0.5.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Oxygen Engine"
license-file = "LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine"
exclude = [
  "demos/**",
  "media/**",
  "oxygengine-ignite",
  "oxygengine-build-tools",
]
readme = "README.md"

[features]
parallel = [
  "oxygengine-core/parallel",
  "oxygengine-composite-renderer/parallel",
  "oxygengine-input/parallel",
  "oxygengine-navigation/parallel",
  "oxygengine-network/parallel",
  "oxygengine-network-backend-desktop/parallel",
  "oxygengine-network-backend-native/parallel",
]
web = [
  "oxygengine-backend-web",
  "oxygengine-core/web",
  "oxygengine-physics-2d/web",
]
desktop = ["parallel"]
input = ["oxygengine-input"]
composite-renderer = ["oxygengine-composite-renderer"]
network = ["oxygengine-network"]
procedural = ["oxygengine-procedural"]
navigation = ["oxygengine-navigation"]
audio = ["oxygengine-audio"]
physics-2d = ["oxygengine-physics-2d"]
integration-physics-2d-composite-renderer = ["oxygengine-integration-p2d-cr"]
web-composite-game = [
  "web",
  "composite-renderer",
  "input",
  "network",
  "navigation",
  "audio",
  "physics-2d",
  "integration-physics-2d-composite-renderer",
  "oxygengine-composite-renderer-backend-web",
  "oxygengine-input-device-web",
  "oxygengine-network-backend-web",
  "oxygengine-audio-backend-web",
]
desktop-headless-game = [
  "desktop",
  "network",
  "navigation",
  "oxygengine-network-backend-desktop",
]
desktop-native-headless-game = [
  "desktop",
  "network",
  "navigation",
  "oxygengine-network-backend-native",
]

[dependencies]
oxygengine-core = { version = "0.5", path = "./oxygengine-core" }
oxygengine-utils = { version = "0.5", path = "./oxygengine-utils" }

[dependencies.oxygengine-backend-web]
version = "0.5"
path = "./oxygengine-backend-web"
optional = true

[dependencies.oxygengine-input]
version = "0.5"
path = "./oxygengine-input"
optional = true

[dependencies.oxygengine-input-device-web]
version = "0.5"
path = "./oxygengine-input-device-web"
optional = true

[dependencies.oxygengine-composite-renderer]
version = "0.5"
path = "./oxygengine-composite-renderer"
optional = true

[dependencies.oxygengine-composite-renderer-backend-web]
version = "0.5"
path = "./oxygengine-composite-renderer-backend-web"
optional = true

[dependencies.oxygengine-network]
version = "0.5"
path = "./oxygengine-network"
optional = true

[dependencies.oxygengine-network-backend-web]
version = "0.5"
path = "./oxygengine-network-backend-web"
optional = true

[dependencies.oxygengine-network-backend-desktop]
version = "0.5"
path = "./oxygengine-network-backend-desktop"
optional = true

[dependencies.oxygengine-network-backend-native]
version = "0.5"
path = "./oxygengine-network-backend-native"
optional = true

[dependencies.oxygengine-procedural]
version = "0.5"
path = "./oxygengine-procedural"
optional = true

[dependencies.oxygengine-navigation]
version = "0.5"
path = "./oxygengine-navigation"
optional = true

[dependencies.oxygengine-audio]
version = "0.5"
path = "./oxygengine-audio"
optional = true

[dependencies.oxygengine-audio-backend-web]
version = "0.5"
path = "./oxygengine-audio-backend-web"
optional = true

[dependencies.oxygengine-physics-2d]
version = "0.5"
path = "./oxygengine-physics-2d"
optional = true

[dependencies.oxygengine-integration-p2d-cr]
version = "0.5"
path = "./oxygengine-integration-p2d-cr"
optional = true

[workspace]
members = [
  "oxygengine-ignite",
  "oxygengine-core",
  "oxygengine-utils",
  "oxygengine-backend-web",
  "oxygengine-input",
  "oxygengine-input-device-web",
  "oxygengine-composite-renderer",
  "oxygengine-composite-renderer-backend-web",
  "oxygengine-network",
  "oxygengine-network-backend-web",
  "oxygengine-network-backend-desktop",
  "oxygengine-network-backend-native",
  "oxygengine-procedural",
  "oxygengine-navigation",
  "oxygengine-audio",
  "oxygengine-audio-backend-web",
  "oxygengine-physics-2d",
  "oxygengine-integration-p2d-cr",
  "oxygengine-build-tools",
  "demos/procedural-world-simulation",
  "demos/chat/chat-server",
  "demos/chat/chat-client",
  "demos/amethyst-integration",
  "demos/basic-web-game",
]
