[workspace]
members = [
  "_",
  "ai",
  "animation",
  "audio",
  "audio-backend-web",
  "backend-web",
  "build-tools",
  "composite-renderer",
  "composite-renderer-backend-web",
  "composite-renderer-tools",
  "core",
  "editor-tools",
  "ha-renderer",
  "ha-renderer-tools",
  "ignite",
  "ignite-derive",
  "ignite-types",
  "input",
  "input-device-web",
  "integration-ow-ha",
  "integration-p2d-cr",
  "integration-ui-cr",
  "integration-ui-ha",
  "integration-vn-ui",
  "navigation",
  "network",
  "network-backend-desktop",
  "network-backend-native",
  "network-backend-web",
  "physics-2d",
  "procedural",
  "overworld",
  "script-flow",
  "user-interface",
  "utils",
  "visual-novel",
]
