[package]
name = "oxygengine-animation"
version = "0.7.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Animation module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-animation"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[features]
web = ["oxygengine-core/web"]
parallel = ["oxygengine-core/parallel"]
scalar64 = ["oxygengine-core/scalar64"]

[dependencies]
oxygengine-core = { version = "0.7", path = "../oxygengine-core" }
serde = { version = "1", features = ["derive"] }
