[package]
name = "oxygengine-backend-web"
version = "0.7.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Web backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-backend-web"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[features]
default = ["web"]
web = ["oxygengine-core/web"]
parallel = ["oxygengine-core/parallel"]
scalar64 = ["oxygengine-core/scalar64"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
futures = "0.1"
oxygengine-core = { version = "0.7", path = "../oxygengine-core" }

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Performance',
  'Storage',
]
