[package]
name = "oxygengine-build-tools"
version = "0.5.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Build tools for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-build-tools"
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
pathdiff = "0.1"
image = "0.22"

[dependencies.texture_packer]
version = "0.18"
# TODO: remove when new version will be released
git = "https://github.com/PsichiX/texture_packer"
revision = "5115833b3a4b5a2b09af701f4251a2dc33e2679b"
