[package]
name = "oxygengine-build-tools"
version = "0.8.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Build tools for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-build-tools"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
pathdiff = "0.1"
image = "0.22"
fs_extra = "1.1"

[dependencies.texture_packer]
version = "0.18"
