[package]
name = "oxygengine-build-tools"
version = "0.13.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Build tools for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-build-tools"
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
pathdiff = "0.2"
image = "0.23"
fs_extra = "1.1"
texture_packer = "0.21"
wasm-pack = "0.9"
