[package]
name = "oxygengine-composite-renderer-backend-web"
version = "0.2.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Composite renderer Web backend module for Oxygen Engine"
license = "MIT"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-composite-renderer-backend-web"

[dependencies]
wasm-bindgen = "0.2"
oxygengine-core = { version = "0.2", path = "../oxygengine-core" }
base64 = "0.10"

[dependencies.oxygengine-composite-renderer]
version = "0.2"
path = "../oxygengine-composite-renderer"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
]
