[package]
name = "oxygengine-composite-renderer-backend-web"
version = "0.4.7"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Composite renderer Web backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-composite-renderer-backend-web"
readme = "../README.md"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
oxygengine-core = { version = "0.4", path = "../oxygengine-core" }

[dependencies.oxygengine-composite-renderer]
version = "0.4"
path = "../oxygengine-composite-renderer"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
  'Blob',
  'Url',
]
