[package]
name = "oxygengine-composite-renderer-backend-web"
version = "0.9.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Composite renderer Web backend module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-composite-renderer-backend-web"
readme = "../README.md"

[features]
default = ["web"]
web = ["oxygengine-core/web", "oxygengine-composite-renderer/web"]
scalar64 = ["oxygengine-core/scalar64", "oxygengine-composite-renderer/scalar64"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
oxygengine-core = { version = "0.9", path = "../oxygengine-core" }
oxygengine-composite-renderer = { version = "0.9", path = "../oxygengine-composite-renderer" }

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
  'Blob',
  'Url',
  'FontFace',
  'FontFaceDescriptors',
  'FontFaceSet',
]
