[package]
name = "oxygengine-composite-renderer"
version = "0.8.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Composite renderer module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-composite-renderer"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[features]
web = ["oxygengine-core/web"]
parallel = ["oxygengine-core/parallel", "oxygengine-utils/parallel"]
scalar64 = ["oxygengine-core/scalar64", "oxygengine-utils/scalar64"]

[dependencies]
oxygengine-core = { version = "0.8", path = "../oxygengine-core" }
oxygengine-utils = { version = "0.8", path = "../oxygengine-utils" }
png = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
