[package]
name = "oxygengine-core"
version = "0.5.3"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Core module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-core"
readme = "../README.md"

[features]
web = ["typid/web"]
parallel = ["rayon", "specs/parallel", "specs-hierarchy/parallel"]

[dependencies]
typid = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rayon = { version = "1.0", optional = true }
specs = { version = "0.14", default-features = false }
specs-hierarchy = { version = "0.3", default-features = false }
lazy_static = "1.3"
