[package]
name = "oxygengine-core"
version = "0.8.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Core module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-core"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[features]
web = ["typid/web"]
parallel = ["rayon", "specs/parallel", "specs-hierarchy/parallel", "shred/parallel"]
scalar64 = []

[dependencies]
oxygengine-ignite-types = { version = "0.8", path = "../oxygengine-ignite-types" }
oxygengine-ignite-derive = { version = "0.8", path = "../oxygengine-ignite-derive" }
typid = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_yaml = "0.8"
rayon = { version = "1.3", optional = true }
specs = { version = "0.14", default-features = false }
specs-hierarchy = { version = "0.3", default-features = false }
shred = { version = "0.7", default-features = false }
shrev = { version = "1.1" }
lazy_static = "1.3"
pest = "2.1"
pest_derive = "2.1"
