[package]
name = "oxygengine-core"
version = "0.12.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Core module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-core"
readme = "../README.md"

[features]
web = ["typid/web"]
parallel = ["rayon", "specs/parallel", "specs-hierarchy/parallel", "shred/parallel"]
scalar64 = []

[dependencies]
oxygengine-ignite-types = { version = "0.12", path = "../oxygengine-ignite-types" }
oxygengine-ignite-derive = { version = "0.12", path = "../oxygengine-ignite-derive" }
typid = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_yaml = "0.8"
rayon = { version = "1.3", optional = true }
specs = { version = "0.16", default-features = false }
specs-hierarchy = { version = "0.6", default-features = false }
shred = { version = "0.10", default-features = false }
shrev = { version = "1.1" }
lazy_static = "1.4"
pest = "2.1"
pest_derive = "2.1"
