[package]
name = "oxygengine-ignite-derive"
version = "0.7.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Ignite derive module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-ignite-derive"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = { version = "1.0.17", features = ["extra-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4"
