[package]
name = "oxygengine-ignite-derive"
version = "0.13.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Ignite derive module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-ignite-derive"
readme = "../README.md"

[lib]
proc-macro = true

[features]
default = ["target-yaml"]
target-yaml = ["serde_yaml"]
target-json = ["serde_json"]
target-ron = ["ron"]
target-binary = ["bincode"]
pretty = []
full = ["target-yaml", "target-json", "target-ron", "target-binary"]

[dependencies]
oxygengine-ignite-types = { version = "0.13", path = "../oxygengine-ignite-types" }
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
lazy_static = "1.4"
serde_yaml = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "1", optional = true }
ron = { version = "0.6", optional = true }
