[package]
name = "oxygengine-ignite-types"
version = "0.7.1"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Ignite types module for Oxygen Engine"
license-file = "../LICENSE"
homepage = "https://github.com/PsichiX/oxygengine"
repository = "https://github.com/PsichiX/oxygengine"
documentation = "https://docs.rs/oxygengine-ignite-types"
readme = "../README.md"
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1", features = ["derive"] }
